--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     <div id='page-wrapper'>
-        <div id='header-section'>
-            <h1>Welcome To The Library</h1>
-        </div>
         <div id='form-section'>
             <button id='add-btn'>Add Book</button>
             <div id='visible-form'  class='invisible'>
@@ -29,8 +26,16 @@
                 <button id='submit-btn'>Submit</button>
             </div>
         </div>
-        <div id='library-section'></div>
+        <div id='header-section'>
+            <h1>Welcome To The Library</h1>
+        </div>
+        <div id='library-section'>
+            
+        </div>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <script src='main.js'></script>
 </body>
 </html>
