--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id='page-wrapper'>
+        <div id='header-section'>
+            <h1>Welcome To The Library</h1>
+        </div>
         <div id='form-section'>
             <button id='add-btn'>Add Book</button>
             <div id='visible-form'  class='invisible'>
@@ -26,10 +29,7 @@
                 <button id='submit-btn'>Submit</button>
             </div>
         </div>
-        <div id='header-section'>
-            <h1>Welcome To The Library</h1>
-        </div>
-        <div id='library-section'>
+        <div id='library-section' class='normal'>
             
         </div>
     </div>
